fix dark mode

--- a/assets/dianyi/colors-dark.scss
+++ b/assets/dianyi/colors-dark.scss
@@ -6,8 +6,8 @@ $spc-bg-00: #E3F0EE; // formerly #F5F5F5, #fffcf7, fffbf5
 $spc-bg-dark: #c10c0c; // formerly #EBEBEB, #FBEBDA, FAF0E3, WIP FFF2EB 
 $spc-primary: #faf0e3; // formerly #122140, 1C304A, 002642
 $spc-primary-light: #fffbf2 ; // formerly #475269, 32415A, 2E4963
-$spc-secondary: #d96e34; // formerly #936C10, 815E0E, b04303
-$spc-secondary-light: #a23e02;
+$spc-secondary: #a23e02; // formerly #936C10, 815E0E, b04303
+$spc-secondary-light: #d96e34;
 $spc-accent: #b9c680;
 $spc-accent-light: #EEF1E0;
 $spc-accent-dark: #dadec7;
